padding/alignment corrections :wrench:

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -162,31 +162,28 @@ header {
 
 .intro {
   height: 100%;
-  max-width: 1200px;
   padding: 40px 20px 65px;
-  @include globals.flex-column-center();
-  align-items: flex-start;
-  // align-items: center;
-  // justify-content: space-evenly;
-  margin: 0 auto;
-  // border: 1px solid red;
-  // gap: 30px;
-  > * + * {
-    margin-top: 25px;
+
+  &__container {
+    @include globals.flex-column-center();
+    align-items: flex-start;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    // border: 1px solid red;
   }
 
   &__info {
     height: 100%;
     width: 100%;
     @include globals.flex-column-center();
-    // border: 1px solid yellow;
-    // justify-content: space-evenly;
+    align-items: flex-end;
     // gap: 20px;
     > * + * {
       margin-top: 25px;
     }
     &--item {
-      width: 100%;
+      width: calc(100% - 12.5px);
       min-width: 280px;
       max-width: 800px;
       border-radius: 30px;
@@ -251,11 +248,14 @@ header {
         content: "3";
       }
     }
+    @media screen and(min-width:800px) {
+      align-items: center;
+    }
     @media screen and (min-width: 1024px) {
       width: 100%;
       flex-direction: row;
       > * + * {
-        margin-top: 0;
+        margin-top: 0px;
       }
       &--item:not(:last-child) {
         margin-right: 25px;
@@ -264,6 +264,9 @@ header {
   }
   @media screen and (min-width: 1024px) {
     align-items: center;
+    > * + * {
+      margin-top: 10px;
+    }
     &__title {
       align-self: flex-start;
     }
@@ -279,17 +282,16 @@ header {
   background-color: #efefef;
   padding: 40px 20px 65px;
   margin: 0 auto;
-  // gap: 20px;
 
   &__container {
     max-width: 1200px;
-    // border: 1px solid red;
     margin: 0 auto;
     @include globals.flex-column-center();
     align-items: flex-start;
     > * + * {
       margin-top: 25px;
     }
+    // border: 1px solid red;
   }
 
   &__cards--container {
